Change library alias in notebooks to dmc

--- a/notebooks/test_alert.ipynb
+++ b/notebooks/test_alert.ipynb
@@ -2,53 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_material_components as mdc\n",
-    "from datetime import datetime\n",
     "from dash import html, dcc, Input, Output, State\n",
-    "import jupyter_dash"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test alert\n",
+    "import jupyter_dash\n",
     "\n",
-    "input = dcc.Input(id=\"input\")\n",
-    "button = html.Button(\"Submit\", id=\"button\", n_clicks=0)\n",
-    "box = mdc.Box(children=[input, button])\n",
-    "\n",
-    "alert = mdc.Alert(id=\"alert\", severity=\"info\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dashboard layout\n",
-    "\n",
-    "tab = mdc.Tab(\n",
-    "    children=[box],\n",
-    "    tabs=[{\"label\": \"Alert\"}]\n",
-    ")\n",
-    "section = mdc.Section(\n",
-    "    orientation=\"columns\",\n",
-    "    children=tab,\n",
-    "    cards=[{\"title\": \"Card 1\"}]\n",
-    ")\n",
-    "\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
-    "page = mdc.Page(orientation=\"columns\", children=section)\n",
-    "\n",
-    "layout = mdc.Dashboard(children=[alert, navbar, page])"
+    "import dash_material_components as dmc"
    ]
   },
   {
@@ -57,6 +18,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test alert\n",
+    "\n",
+    "input = dcc.Input(id=\"input\")\n",
+    "button = html.Button(\"Submit\", id=\"button\", n_clicks=0)\n",
+    "box = dmc.Box(children=[input, button])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dashboard layout\n",
+    "\n",
+    "tab = dmc.Tab(\n",
+    "    children=[box],\n",
+    "    tabs=[{\"label\": \"Alert\"}]\n",
+    ")\n",
+    "section = dmc.Section(\n",
+    "    orientation=\"columns\",\n",
+    "    children=tab,\n",
+    "    cards=[{\"title\": \"Card 1\"}]\n",
+    ")\n",
+    "\n",
+    "alert = dmc.Alert(id=\"alert\", severity=\"info\")\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
+    "page = dmc.Page(orientation=\"columns\", children=section)\n",
+    "\n",
+    "layout = dmc.Dashboard(children=[alert, navbar, page])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dash app\n",
+    "\n",
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
@@ -68,7 +69,7 @@
     "def update_alert(n_clicks, value):\n",
     "    return value\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8007, debug=False)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
