--- a/notebooks/test_download.ipynb
+++ b/notebooks/test_download.ipynb
@@ -2,57 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "everyday-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_material_components as mdc\n",
-    "\n",
     "from dash import dcc, Input, Output\n",
-    "import jupyter_dash"
+    "import jupyter_dash\n",
+    "\n",
+    "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "subjective-secondary",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_1a = mdc.Typography(\n",
+    "# Test download\n",
+    "\n",
+    "text_1a = dmc.Typography(\n",
     "    id=\"text-1a\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
-    "text_2a = mdc.Typography(\n",
+    "text_2a = dmc.Typography(\n",
     "    id=\"text-2a\",\n",
     "    text=\"Other content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dashboard layout\n",
     "\n",
-    "section_1 = mdc.Section(\n",
+    "section_1 = dmc.Section(\n",
     "    id=\"section-1\",\n",
     "    orientation=\"columns\",\n",
     "    children=[text_1a],\n",
     "    cards=[{\"title\": \"Card 1a\"}]\n",
     ")\n",
-    "section_2 = mdc.Section(\n",
+    "section_2 = dmc.Section(\n",
     "    id=\"section-2\",\n",
     "    size=3,\n",
     "    children=[text_2a],\n",
     "    orientation=\"rows\",\n",
     "    cards=[{\"title\": \"Card 2a\", \"downloadable\": True}]\n",
     ")\n",
-    "\n",
     "download = dcc.Download(id=\"download\")\n",
     "\n",
-    "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2, download])\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
+    "page = dmc.Page(orientation=\"columns\", children=[section_1, section_2, download])\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, page])"
+    "layout = dmc.Dashboard(children=[navbar, page])"
    ]
   },
   {
@@ -62,6 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dash app\n",
+    "\n",
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
@@ -76,7 +88,7 @@
     "def on_download_click(downloaded, text):\n",
     "    return dict(content=text, filename=\"test.txt\")\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
@@ -104,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
