--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -7,10 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_material_components as mdc\n",
-    "\n",
     "from jupyter_dash import JupyterDash\n",
-    "from dash import Input, Output\n"
+    "from dash import Input, Output\n",
+    "\n",
+    "import dash_material_components as dmc"
    ]
   },
   {
@@ -22,19 +22,19 @@
    "source": [
     "# Test toggle\n",
     "\n",
-    "toggle = mdc.Toggle(\n",
+    "toggle = dmc.Toggle(\n",
     "    id=\"toggle\",\n",
     "    orientation=\"vertical\",\n",
     "    options=[\"test a\", \"test b\"],\n",
     "    selected=\"test b\",\n",
     ")\n",
-    "text = mdc.Typography(\n",
+    "text = dmc.Typography(\n",
     "    id=\"text\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box = mdc.Box(children=[toggle, text])"
+    "box = dmc.Box(children=[toggle, text])"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "# Test dropdown\n",
     "\n",
-    "dropdown = mdc.Dropdown(\n",
+    "dropdown = dmc.Dropdown(\n",
     "    id=\"dropdown\",\n",
     "    width=150,\n",
     "    labelText=\"test\",\n",
@@ -55,13 +55,13 @@
     "    multiple=True,\n",
     "    selected=[\"test 2\"],\n",
     ")\n",
-    "text_2 = mdc.Typography(\n",
+    "text_2 = dmc.Typography(\n",
     "    id=\"text-2\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_2 = mdc.Box(children=[dropdown, text_2])"
+    "box_2 = dmc.Box(children=[dropdown, text_2])"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "source": [
     "# Test calendar\n",
     "\n",
-    "calendar = mdc.Calendar(\n",
+    "calendar = dmc.Calendar(\n",
     "    id=\"calendar\",\n",
     "    width=150,\n",
     "    labelText=\"test\",\n",
@@ -82,13 +82,13 @@
     "    disableFuture=True,\n",
     "    selected=\"2022-05-01\",\n",
     ")\n",
-    "text_3 = mdc.Typography(\n",
+    "text_3 = dmc.Typography(\n",
     "    id=\"text-3\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_3 = mdc.Box(children=[calendar, text_3])"
+    "box_3 = dmc.Box(children=[calendar, text_3])"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "source": [
     "# Test slider\n",
     "\n",
-    "slider_41 = mdc.Slider(\n",
+    "slider_41 = dmc.Slider(\n",
     "    id=\"slider-41\",\n",
     "    width=300,\n",
     "    labelText=\"integer\",\n",
@@ -118,13 +118,13 @@
     "    inputType=\"integer\",\n",
     "    inputLeftAdornment=\"%\"\n",
     ")\n",
-    "text_41 = mdc.Typography(\n",
+    "text_41 = dmc.Typography(\n",
     "    id=\"text-41\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "slider_42 = mdc.Slider(\n",
+    "slider_42 = dmc.Slider(\n",
     "    id=\"slider-42\",\n",
     "    width=300,\n",
     "    labelText=\"float\",\n",
@@ -144,13 +144,13 @@
     "    inputRightAdornment=\"MWh\",\n",
     "    margin=3\n",
     ")\n",
-    "text_42 = mdc.Typography(\n",
+    "text_42 = dmc.Typography(\n",
     "    id=\"text-42\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "slider_43 = mdc.Slider(\n",
+    "slider_43 = dmc.Slider(\n",
     "    id=\"slider-43\",\n",
     "    width=300,\n",
     "    labelText=\"No input text\",\n",
@@ -166,13 +166,13 @@
     "        {\"label\": \"100\", \"value\": 100},\n",
     "    ]\n",
     ")\n",
-    "text_43 = mdc.Typography(\n",
+    "text_43 = dmc.Typography(\n",
     "    id=\"text-43\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_4 = mdc.Box(children=[slider_41, text_41, slider_42, text_42, slider_43, text_43])"
+    "box_4 = dmc.Box(children=[slider_41, text_41, slider_42, text_42, slider_43, text_43])"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "source": [
     "# Test text input\n",
     "\n",
-    "input_text = mdc.InputText(\n",
+    "input_text = dmc.InputText(\n",
     "    id=\"input-text\",\n",
     "    labelText=\"text\",\n",
     "    value=\"test\",\n",
@@ -194,7 +194,7 @@
     "    size=\"medium\",\n",
     ")\n",
     "\n",
-    "input_integer = mdc.InputText(\n",
+    "input_integer = dmc.InputText(\n",
     "    id=\"input-integer\",\n",
     "    value=1,\n",
     "    minValue=0,\n",
@@ -205,7 +205,7 @@
     "    width=\"300px\"\n",
     ")\n",
     "\n",
-    "input_float = mdc.InputText(\n",
+    "input_float = dmc.InputText(\n",
     "    id=\"input-float\",\n",
     "    value=2.5,\n",
     "    minValue=-109.99,\n",
@@ -217,17 +217,17 @@
     "    width=\"300px\"\n",
     ")\n",
     "\n",
-    "view_text = mdc.Typography(id=\"view-text\")\n",
-    "view_integer = mdc.Typography(id=\"view-integer\")\n",
-    "view_float = mdc.Typography(id=\"view-float\")\n",
+    "view_text = dmc.Typography(id=\"view-text\")\n",
+    "view_integer = dmc.Typography(id=\"view-integer\")\n",
+    "view_float = dmc.Typography(id=\"view-float\")\n",
     "\n",
-    "box_51 = mdc.Box(children=[input_text, view_text])\n",
-    "box_52 = mdc.Box(children=[input_integer, view_integer])\n",
-    "box_53 = mdc.Box(children=[input_float, view_float])\n",
+    "box_51 = dmc.Box(children=[input_text, view_text])\n",
+    "box_52 = dmc.Box(children=[input_integer, view_integer])\n",
+    "box_53 = dmc.Box(children=[input_float, view_float])\n",
     "\n",
-    "box_54 = mdc.InputText(value=\"Some additional text\", width=\"300px\")\n",
+    "box_54 = dmc.InputText(value=\"Some additional text\", width=\"300px\")\n",
     "\n",
-    "box_5 = mdc.Box(children=[box_51, box_52, box_53, box_54])"
+    "box_5 = dmc.Box(children=[box_51, box_52, box_53, box_54])"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "    {\"label\": \"Charles-Augustin de Coulomb\", \"invention\": \"Established Coulomb's law for electrostatic force between charges.\", \"value\": \"9\", \"group\": \"C\"}\n",
     "]\n",
     "\n",
-    "autocomplete = mdc.Autocomplete(\n",
+    "autocomplete = dmc.Autocomplete(\n",
     "    id=\"autocomplete\",\n",
     "    labelText=\"test autocomplete\",\n",
     "    options=scientists,\n",
@@ -263,13 +263,13 @@
     "    freeSolo=True\n",
     ")\n",
     "\n",
-    "text_61 = mdc.Typography(\n",
+    "text_61 = dmc.Typography(\n",
     "    id=\"text-61\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "autocomplete_multiple = mdc.Autocomplete(\n",
+    "autocomplete_multiple = dmc.Autocomplete(\n",
     "    id=\"autocomplete-multiple\",\n",
     "    labelText=\"Pick your favorite scientists\",\n",
     "    options=scientists,\n",
@@ -278,13 +278,13 @@
     "    freeSolo=True,\n",
     ")\n",
     "\n",
-    "text_62 = mdc.Typography(\n",
+    "text_62 = dmc.Typography(\n",
     "    id=\"text-62\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_6 = mdc.Box(children=[autocomplete, text_61, autocomplete_multiple, text_62])\n"
+    "box_6 = dmc.Box(children=[autocomplete, text_61, autocomplete_multiple, text_62])"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "source": [
     "# Test button\n",
     "\n",
-    "button_1 = mdc.Button(\n",
+    "button_1 = dmc.Button(\n",
     "    id=\"button-1\",\n",
     "    text=\"Click me!\",\n",
     "    variant=\"contained\",\n",
@@ -306,42 +306,42 @@
     "    disabled=False,\n",
     ")\n",
     "\n",
-    "button_2 = mdc.Button(\n",
+    "button_2 = dmc.Button(\n",
     "    id=\"button-2\",\n",
     "    text=\"Click me!\",\n",
     "    variant=\"outlined\",\n",
     "    color=\"secondary\",\n",
     ")\n",
     "\n",
-    "button_3 = mdc.Button(\n",
+    "button_3 = dmc.Button(\n",
     "    id=\"button-3\",\n",
     "    text=\"Click me!\",\n",
     "    variant=\"text\",\n",
     "    color=\"default\",\n",
     ")\n",
     "\n",
-    "box_btns = mdc.Box(children=[button_1, button_2, button_3], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
+    "box_btns = dmc.Box(children=[button_1, button_2, button_3], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
     "\n",
-    "text_71 = mdc.Typography(\n",
+    "text_71 = dmc.Typography(\n",
     "    id=\"text-71\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "text_72 = mdc.Typography(\n",
+    "text_72 = dmc.Typography(\n",
     "    id=\"text-72\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "text_73 = mdc.Typography(\n",
+    "text_73 = dmc.Typography(\n",
     "    id=\"text-73\",\n",
     "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_clicks = mdc.Box(children=[text_71, text_72, text_73], sx={\"display\": \"flex\", \"gap\": \"20px\"})\n",
-    "box_7 = mdc.Box(children=[box_btns, box_clicks])\n"
+    "box_clicks = dmc.Box(children=[text_71, text_72, text_73], sx={\"display\": \"flex\", \"gap\": \"20px\"})\n",
+    "box_7 = dmc.Box(children=[box_btns, box_clicks])"
    ]
   },
   {
@@ -353,7 +353,7 @@
    "source": [
     "# Dashboard layout\n",
     "\n",
-    "tab = mdc.Tab(\n",
+    "tab = dmc.Tab(\n",
     "    children=[box, box_2, box_3, box_4, box_5, box_6, box_7],\n",
     "    tabs=[\n",
     "        {\"label\": \"Toggle\"},\n",
@@ -365,16 +365,16 @@
     "        {\"label\": \"Button\"},\n",
     "    ]\n",
     ")\n",
-    "section = mdc.Section(\n",
+    "section = dmc.Section(\n",
     "    orientation=\"columns\",\n",
     "    children=tab,\n",
     "    cards=[{\"title\": \"Card 1\"}]\n",
     ")\n",
     "\n",
-    "page = mdc.Page(orientation=\"columns\", children=section)\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
+    "page = dmc.Page(orientation=\"columns\", children=section)\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, page])"
+    "layout = dmc.Dashboard(children=[navbar, page])"
    ]
   },
   {
@@ -501,7 +501,7 @@
     "    return f\"{n_clicks} clicks\"\n",
     "\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=True)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=True)"
    ]
   },
   {
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
