--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -10,7 +10,7 @@
     "from jupyter_dash import JupyterDash\n",
     "from dash import Input, Output\n",
     "\n",
-    "import dash_material_components as mdc"
+    "import dash_material_components as dmc"
    ]
   },
   {
@@ -20,40 +20,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_1a = mdc.Typography(\n",
+    "# Test sidebar\n",
+    "\n",
+    "text_1a = dmc.Typography(\n",
     "    id=\"text-1a\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
-    "text_1b = mdc.Typography(\n",
+    "text_1b = dmc.Typography(\n",
     "    id=\"text-1b\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
-    "text_1c = mdc.Typography(\n",
+    "text_1c = dmc.Typography(\n",
     "    id=\"text-1c\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
-    "tab = mdc.Tab(\n",
+    "tab = dmc.Tab(\n",
     "    children=[text_1a, text_1b, text_1c],\n",
     "    tabs=[{\"label\": \"1a\"}, {\"label\": \"1b\"}, {\"label\": \"1c\"}]\n",
     ")\n",
-    "section = mdc.Section(\n",
+    "section = dmc.Section(\n",
     "    orientation=\"columns\",\n",
     "    children=tab,\n",
     "    cards=[{\"title\": \"Card 1\"}]\n",
     ")\n",
     "\n",
-    "toggle = mdc.Toggle(\n",
+    "toggle = dmc.Toggle(\n",
     "    id=\"toggle\",\n",
     "    options=[1, 2],\n",
     "    selected=2,\n",
     ")\n",
-    "calendar = mdc.Calendar(\n",
+    "calendar = dmc.Calendar(\n",
     "    id=\"calendar\",\n",
     "    width=180,\n",
     "    labelText=\"test\",\n",
@@ -62,7 +64,7 @@
     "    disableFuture=True,\n",
     "    selected=\"2022-05-01\",\n",
     ")\n",
-    "dropdown = mdc.Dropdown(\n",
+    "dropdown = dmc.Dropdown(\n",
     "    id=\"dropdown\",\n",
     "    width=180,\n",
     "    labelText=\"test\",\n",
@@ -71,7 +73,7 @@
     "    multiple=False,\n",
     "    selected=[\"test 1\"],\n",
     ")\n",
-    "slider = mdc.Slider(\n",
+    "slider = dmc.Slider(\n",
     "    id=\"slider\",\n",
     "    width=300,\n",
     "    labelText=\"\",\n",
@@ -88,17 +90,26 @@
     "    ],\n",
     "    inputType=\"float\",\n",
     "    inputRightAdornment=\"MWh\"\n",
-    ")\n",
-    "sidebar = mdc.SideBar(\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dashboard layout\n",
+    "\n",
+    "sidebar = dmc.SideBar(\n",
     "    children=[toggle, calendar, dropdown, slider],\n",
     "    title=\"Settings\",\n",
     "    settings=[\"Select choice\", \"Select date\", \"Select option\",\"Slide to desired value\"],\n",
     ")\n",
+    "page = dmc.Page(orientation=\"columns\", children=section)\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
     "\n",
-    "page = mdc.Page(orientation=\"columns\", children=section)\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
-    "\n",
-    "layout = mdc.Dashboard(children=[navbar, sidebar, page])"
+    "layout = dmc.Dashboard(children=[navbar, sidebar, page])"
    ]
   },
   {
@@ -108,6 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dash app\n",
+    "\n",
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
@@ -139,7 +152,7 @@
     "        return \", \".join(selected)\n",
     "    return \"No content...\"\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
@@ -167,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
