--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -2,58 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "great-steam",
    "metadata": {},
    "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
-    "\n",
     "from dash import html, Input, Output\n",
-    "import dash_material_components as mdc"
+    "\n",
+    "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "hindu-script",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = mdc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
-    "text_2 = mdc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")\n",
-    "\n",
-    "tab = mdc.Tab(\n",
-    "    children=[text, text_2],\n",
-    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
-    ")\n",
+    "# Test tab\n",
     "\n",
     "button = html.Button(\"Show error page\", id=\"button\", n_clicks=0)\n",
-    "section_1 = mdc.Section(\n",
+    "\n",
+    "text = dmc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
+    "text_2 = dmc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dasboard layout\n",
+    "\n",
+    "section_1 = dmc.Section(\n",
     "    id=\"section-1\",\n",
     "    orientation=\"rows\",\n",
     "    children=[text, text_2, button],\n",
     "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}, {\"title\": \"Card 1c\"}]\n",
     ")\n",
-    "\n",
-    "section_2 = mdc.Section(\n",
+    "tab = dmc.Tab(\n",
+    "    children=[text, text_2],\n",
+    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
+    ")\n",
+    "section_2 = dmc.Section(\n",
     "    id=\"section-2\",\n",
     "    children=tab,\n",
     "    cards=[{\"title\": \"Card 2\"}]\n",
     ")\n",
-    "page = mdc.Page(id=\"page\", orientation=\"columns\", children=[section_1, section_2])\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, page])"
+    "page = dmc.Page(id=\"page\", orientation=\"columns\", children=[section_1, section_2])\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
+    "\n",
+    "layout = dmc.Dashboard(children=[navbar, page])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "typical-population",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dash app\n",
+    "\n",
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
@@ -66,21 +79,13 @@
     "def show_error_page(n_clicks):\n",
     "    return [404, \"Error message\"]\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "00524167",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "901bf8c5",
    "metadata": {},
    "outputs": [],
    "source": []
