--- a/notebooks/test_table.ipynb
+++ b/notebooks/test_table.ipynb
@@ -9,10 +9,18 @@
     "from jupyter_dash import JupyterDash\n",
     "from dash import Input, Output\n",
     "\n",
-    "import dash_material_components as mdc\n",
-    "\n",
+    "import dash_material_components as dmc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create sample data\n",
-    "data = [\n",
+    "\n",
+    "DATA = [\n",
     "    {'name': 'Alice', 'age': 25, 'gender': 'Female', 'salary': 50000},\n",
     "    {'name': 'Bob', 'age': 30, 'gender': 'Male', 'salary': 60000},\n",
     "    {'name': 'Charlie', 'age': 35, 'gender': 'Male', 'salary': 70000},\n",
@@ -35,12 +43,12 @@
     "    {'name': 'Thomas', 'age': 120, 'gender': 'Male', 'salary': 240000},\n",
     "]\n",
     "\n",
-    "columns = [\n",
+    "COLUMNS = [\n",
     "    {'field': 'Name', 'width': 70},\n",
     "    {'field': 'Age', 'width': 50},\n",
     "    {'field': 'Gender', 'width': 70},\n",
     "    {'field': 'Salary'},\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -49,28 +57,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create components\n",
+    "# Test table\n",
     "\n",
-    "table = mdc.Table(\n",
+    "table = dmc.Table(\n",
     "    id=\"table\",\n",
-    "    rows=data,\n",
-    "    columns=columns,\n",
+    "    rows=DATA,\n",
+    "    columns=COLUMNS,\n",
     "    rowsPerPageOptions=[5, 10, 20],\n",
     ")\n",
-    "text_1b = mdc.Typography(\n",
+    "text_1b = dmc.Typography(\n",
     "    id=\"text-1b\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
-    "text_1c = mdc.Typography(\n",
+    "text_1c = dmc.Typography(\n",
     "    id=\"text-1c\",\n",
     "    text=\"Content...\",\n",
     "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "dropdown = mdc.Dropdown(\n",
+    "dropdown = dmc.Dropdown(\n",
     "    id=\"dropdown\",\n",
     "    width=150,\n",
     "    labelText=\"Gender\",\n",
@@ -80,24 +88,9 @@
     "    selected=[\"Male\", \"Female\"],\n",
     ")\n",
     "\n",
-    "box = mdc.Box(\n",
+    "box = dmc.Box(\n",
     "    children=[table, dropdown],\n",
-    ")\n",
-    "\n",
-    "tab = mdc.Tab(\n",
-    "    children=[box, text_1b, text_1c],\n",
-    "    tabs=[{\"label\": \"Table tab\"}, {\"label\": \"1b\"}, {\"label\": \"1c\"}]\n",
-    ")\n",
-    "section = mdc.Section(\n",
-    "    orientation=\"columns\",\n",
-    "    children=tab,\n",
-    "    cards=[{\"title\": \"Card 1\"}]\n",
-    ")\n",
-    "\n",
-    "page = mdc.Page(orientation=\"columns\", children=section)\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
-    "\n",
-    "layout = mdc.Dashboard(children=[navbar, page])\n"
+    ")"
    ]
   },
   {
@@ -106,28 +99,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dasboard layout\n",
+    "\n",
+    "tab = dmc.Tab(\n",
+    "    children=[box, text_1b, text_1c],\n",
+    "    tabs=[{\"label\": \"Table tab\"}, {\"label\": \"1b\"}, {\"label\": \"1c\"}]\n",
+    ")\n",
+    "section = dmc.Section(\n",
+    "    orientation=\"columns\",\n",
+    "    children=tab,\n",
+    "    cards=[{\"title\": \"Card 1\"}]\n",
+    ")\n",
+    "\n",
+    "page = dmc.Page(orientation=\"columns\", children=section)\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
+    "\n",
+    "layout = dmc.Dashboard(children=[navbar, page])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dash app\n",
+    "\n",
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "# Create callbacks\n",
     "@app.callback(\n",
     "    Output(\"table\", \"rows\"),\n",
     "    Input(\"dropdown\", \"selected\"),\n",
     ")\n",
     "def dropdown_callback(selected):\n",
     "    print(f\"selected: {selected}\")\n",
-    "    return [row for row in data if row[\"gender\"] in selected]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
+    "    return [row for row in data if row[\"gender\"] in selected]\n",
     "\n",
     "app.run_server(mode=\"jupyterlab\", host=\"0.0.0.0\", port=8001, debug=True)"
    ]
