--- a/notebooks/test_layout.ipynb
+++ b/notebooks/test_layout.ipynb
@@ -2,33 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "everyday-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
     "import jupyter_dash\n",
-    "import dash_material_components as mdc"
+    "\n",
+    "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "subjective-secondary",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = mdc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
-    "text_2 = mdc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")\n",
+    "# Dashboard layout\n",
     "\n",
-    "section_1 = mdc.Section(\n",
+    "text = dmc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
+    "text_2 = dmc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")\n",
+    "\n",
+    "section_1 = dmc.Section(\n",
     "    id=\"section-1\",\n",
     "    orientation=\"columns\",\n",
     "    children=[text, text_2],\n",
     "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
     ")\n",
     "\n",
-    "section_2 = mdc.Section(\n",
+    "section_2 = dmc.Section(\n",
     "    id=\"section-2\",\n",
     "    size=3,\n",
     "    children=[text, text_2],\n",
@@ -36,10 +39,10 @@
     "    cards=[{\"title\": \"Card 2a\", \"size\": 4}, {\"title\": \"Card 2b\"}]\n",
     ")\n",
     "\n",
-    "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
-    "navbar = mdc.NavBar(title=\"Custom dash\")\n",
+    "page = dmc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
+    "navbar = dmc.NavBar(title=\"Custom dash\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, page])"
+    "layout = dmc.Dashboard(children=[navbar, page])"
    ]
   },
   {
@@ -49,10 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dash app\n",
+    "\n",
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
+    "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
@@ -80,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
