--- a/notebooks/test_table.ipynb
+++ b/notebooks/test_table.ipynb
@@ -134,7 +134,7 @@
     ")\n",
     "def dropdown_callback(selected):\n",
     "    print(f\"selected: {selected}\")\n",
-    "    return [row for row in data if row[\"gender\"] in selected]\n",
+    "    return [row for row in DATA if row[\"gender\"] in selected]\n",
     "\n",
     "app.run_server(mode=\"jupyterlab\", host=\"0.0.0.0\", port=8001, debug=True)"
    ]
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
