Correct accepted values for button color

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -310,14 +310,15 @@
     "    id=\"button-2\",\n",
     "    text=\"Click me!\",\n",
     "    variant=\"outlined\",\n",
-    "    color=\"secondary\",\n",
+    "    color=\"success\",\n",
     ")\n",
     "\n",
     "button_3 = dmc.Button(\n",
     "    id=\"button-3\",\n",
     "    text=\"Click me!\",\n",
     "    variant=\"text\",\n",
-    "    color=\"default\",\n",
+    "    color=\"secondary\",\n",
+    "    disabled=True,\n",
     ")\n",
     "\n",
     "box_btns = dmc.Box(children=[button_1, button_2, button_3], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
