Add IconButton to test notebook

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "2091a0c4",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "2d08930d",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "ef526880",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
     "\n",
     "button_1 = dmc.Button(\n",
     "    id=\"button-1\",\n",
-    "    text=\"Click me!\",\n",
+    "    text=\"\",\n",
     "    variant=\"contained\",\n",
     "    color=\"primary\",\n",
     "    endIcon=\"save\",\n",
@@ -322,7 +322,14 @@
     "    disabled=True,\n",
     ")\n",
     "\n",
-    "box_btns = dmc.Box(children=[button_1, button_2, button_3], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
+    "button_4 = dmc.IconButton(\n",
+    "    id=\"button-4\",\n",
+    "    icon=\"delete\",\n",
+    "    color=\"warning\",\n",
+    "    nClicks=0,\n",
+    ")\n",
+    "\n",
+    "box_btns = dmc.Box(children=[button_1, button_2, button_3, button_4], sx={\"display\": \"flex\", \"gap\": \"10px\"})\n",
     "\n",
     "text_71 = dmc.Typography(\n",
     "    id=\"text-71\",\n",
@@ -342,13 +349,19 @@
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
-    "box_clicks = dmc.Box(children=[text_71, text_72, text_73], sx={\"display\": \"flex\", \"gap\": \"20px\"})\n",
+    "text_74 = dmc.Typography(\n",
+    "    id=\"text-74\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_clicks = dmc.Box(children=[text_71, text_72, text_73, text_74], sx={\"display\": \"flex\", \"gap\": \"20px\"})\n",
     "box_7 = dmc.Box(children=[box_btns, box_clicks])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -500,6 +513,13 @@
     "    Input(component_id='button-3', component_property='nClicks'),\n",
     ")\n",
     "def update_clicks_3(n_clicks):\n",
+    "    return f\"{n_clicks} clicks\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-74', component_property='text'),\n",
+    "    Input(component_id='button-4', component_property='nClicks'),\n",
+    ")\n",
+    "def update_clicks_4(n_clicks):\n",
     "    return f\"{n_clicks} clicks\"\n",
     "\n",
     "\n",
