Add test for tab content height

--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "great-steam",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "86602fb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    {\"name\": \"John\"},\n",
+    "    {\"name\": \"Paul\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Ringo\"},\n",
+    "    {\"name\": \"Brian\"},\n",
+    "    {\"name\": \"Pete\"},\n",
+    "    {\"name\": \"Stuart\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Neil\"},\n",
+    "    {\"name\": \"Mal\"},\n",
+    "    {\"name\": \"Jim\"},\n",
+    "    {\"name\": \"Derek\"},\n",
+    "    {\"name\": \"Geoff\"},\n",
+    "    {\"name\": \"Andy\"},\n",
+    "    {\"name\": \"Tony\"},\n",
+    "    {\"name\": \"Julia\"},\n",
+    "    {\"name\": \"Astrid\"},\n",
+    "    {\"name\": \"Klaus\"},\n",
+    "    {\"name\": \"Yoko\"},\n",
+    "    {\"name\": \"Billy\"},\n",
+    "    {\"name\": \"Eric\"},\n",
+    "    {\"name\": \"Ginger\"},\n",
+    "    {\"name\": \"Jack\"},\n",
+    "    {\"name\": \"Keith\"},\n",
+    "    {\"name\": \"Mick\"},\n",
+    "    {\"name\": \"Charlie\"},\n",
+    "    {\"name\": \"Ronnie\"},\n",
+    "    {\"name\": \"Bill\"},\n",
+    "    {\"name\": \"Ian\"},\n",
+    "    {\"name\": \"John\"},\n",
+    "    {\"name\": \"Paul\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Ringo\"},\n",
+    "    {\"name\": \"Brian\"},\n",
+    "    {\"name\": \"Pete\"},\n",
+    "    {\"name\": \"Stuart\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Neil\"},\n",
+    "    {\"name\": \"Mal\"},\n",
+    "    {\"name\": \"Jim\"},\n",
+    "    {\"name\": \"Derek\"},\n",
+    "    {\"name\": \"Geoff\"},\n",
+    "    {\"name\": \"Andy\"},\n",
+    "    {\"name\": \"Tony\"},\n",
+    "    {\"name\": \"Julia\"},\n",
+    "    {\"name\": \"Astrid\"},\n",
+    "    {\"name\": \"Klaus\"},\n",
+    "    {\"name\": \"Yoko\"},\n",
+    "    {\"name\": \"Billy\"},\n",
+    "    {\"name\": \"Eric\"},\n",
+    "    {\"name\": \"Ginger\"},\n",
+    "    {\"name\": \"Jack\"},\n",
+    "    {\"name\": \"Keith\"},\n",
+    "    {\"name\": \"Mick\"},\n",
+    "    {\"name\": \"Charlie\"},\n",
+    "    {\"name\": \"Ronnie\"},\n",
+    "    {\"name\": \"Bill\"},\n",
+    "    {\"name\": \"Ian\"},\n",
+    "    {\"name\": \"John\"},\n",
+    "    {\"name\": \"Paul\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Ringo\"},\n",
+    "    {\"name\": \"Brian\"},\n",
+    "    {\"name\": \"Pete\"},\n",
+    "    {\"name\": \"Stuart\"},\n",
+    "    {\"name\": \"George\"},\n",
+    "    {\"name\": \"Neil\"},\n",
+    "    {\"name\": \"Mal\"},\n",
+    "    {\"name\": \"Jim\"},\n",
+    "    {\"name\": \"Derek\"},\n",
+    "    {\"name\": \"Geoff\"},\n",
+    "    {\"name\": \"Andy\"},\n",
+    "]\n",
+    "\n",
+    "table = dmc.Table( \n",
+    "    columns=[\"name\"],\n",
+    "    rows=data,\n",
+    "    rowsPerPageOptions=[25, 50, 100],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "hindu-script",
    "metadata": {},
    "outputs": [],
@@ -30,7 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "a76308eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +133,8 @@
     "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}, {\"title\": \"Card 1c\"}]\n",
     ")\n",
     "tab = dmc.Tab(\n",
-    "    children=[text, text_2],\n",
-    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
+    "    children=[table, text_2, dmc.Box(sx={\"height\": \"inherit\", \"width\": \"inherit\", \"backgroundColor\": \"red\"})],\n",
+    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}, {\"label\": \"RED!\"}]\n",
     ")\n",
     "section_2 = dmc.Section(\n",
     "    id=\"section-2\",\n",
